# concert-vitae

./: .gitignore  404.html  Gemfile  README.md  _config.yml  add.html  index.html
_data/: concerts.yaml
_includes/: concerts.html  head.html  header.html
_layouts/: default.html  post.html
_sass/: base.scss  bio.scss  rows.scss
assets/: main.scss  manifest.json  sw.js
function/: .gitignore  Cargo.toml  README.md
function/src/: handler.rs  main.rs
