[package]
name = "concert_vitae_function"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/handler.rs"

[dependencies]
axum = { version = "0.8.1", features = ["multipart"] }
chrono = "0.4.40"
git2 = "0.20.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
